Enhance: Default tab completion will filter based on parts of the last argument