@@ -3,7 +3,6 @@ package com.dragosghinea.royale.internal.utils.command;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public interface CmdRoute {
 
@@ -18,10 +17,12 @@ public interface CmdRoute {
     boolean execute(CmdContext context);
 
     default List<String> tabComplete(CmdContext context) {
+        String currentInput = context.getArgsLeftToProcess().isEmpty() ? "" : context.getArgsLeftToProcess().lastElement();
         return subRoutes().values().stream()
                 .filter(cmdRoute -> cmdRoute.canExecute(context, true))
                 .map(CmdRoute::getName)
-                .collect(Collectors.toList());
+                .filter(routeName -> routeName.startsWith(currentInput))
+                .toList();
     }
 
     default Map<String, CmdRoute> subRoutes() {
